# DevelopingHandbook

./: .gitignore  LICENSE  README.md  handbook.txt
QA/: access-permission-modifier.md  char-types.md  const-pointer.md  four-common-cpp_cast.md  reordering.md  rust-macros.md
algorithm/algorithm-learning.cc/: CMakeLists.txt
algorithm/algorithm-learning.cc/chapter_algorithm/: CMakeLists.txt  main.cc
algorithm/algorithm-learning.cc/chapter_container/: CMakeLists.txt  main.cc
algorithm/algorithm-learning.cc/chapter_string/: CMakeLists.txt  main.cc
archlinux/: about-drivers.md  aur-tools.md  installation-guide.md  system-optimization.md
archlinux/package/: README.md
build-tools/cmake/: cmake-using-handbook.md
build-tools/makefile/: makefile-base-grammar.md
dotfiles/: .vimrc
dotfiles/.zshrc.d/: alias.zsh  env.zsh  function.zsh  init.zsh
dotfiles/PowerShell/: Microsoft.PowerShell_profile.ps1
dotfiles/kitty/: kitty.conf  readme.txt
dotfiles/wezterm/: .gitignore
dotfiles/yazi/: keymap.toml  package.toml  yazi.toml
git/: git-command-overall.md  git使用手册.md
java/: Java常用核心类库.xmind  java-core-class-lib.md
java/jvm/: Heap-vs-Stack.md
languages/markdown/: markdown-base-grammar.md
languages/regex/: regex-base-grammar.md
languages/shell/: shell-base-grammar.md
linux/: linux-common-commands.md  linux-common-configs.md  linux-filetree-introduce.md  ubuntu-using-handbook.md  ubuntu使用手册.md
regex/: regex-base-grammar.md
shell/: shell基本语法.md
sys-tools/linux/: linux-common-commands.md  (+1 more)
vim/: vim-using-handbook.md  vim编辑器使用手册.md
(+11 files in other folders)
